class Optimization:

    def optimize(self):
        pass
    
    @staticmethod
    def hist_compare(theory, result):
        pass

    def modelling(self):
        pass

    def result(self):
        pass
